--- a/.github/workflows/spark.yml
+++ b/.github/workflows/spark.yml
@@ -15,10 +15,15 @@ jobs:
   spark:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+      
     steps:
     - uses: actions/checkout@v4
-    - run: ls -la 
-
+    - run: ls -la  
+    
     - uses: actions/setup-python@v5
       with:
         python-version: '3.10'
@@ -33,5 +38,19 @@ jobs:
         spark-version: '3.5.3'
         hadoop-version: '3'
 
-    - run: spark-submit --version
+   # - run: spark-submit --master local hello-spark.py
+    - run: wget -O dataset.csv https://raw.githubusercontent.com/Kelp-klep/semanaTecprogra/refs/heads/master/datasets/qualifying_1960-2024.csv   
+    - run: ls -la
+    - run: spark-submit --master local futbol.py 
 
+    - run: ls -la
+    - name: GIT commit and push docs
+      env: 
+        CI_COMMIT_MESSAGE: save spark results
+        CI_COMMIT_AUTHOR: adsoft 
+      run: |
+        git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+        git config --global user.email "adsoft@live.com.mx"
+        git add results
+        git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
+        git push
